--- a/style.css
+++ b/style.css
@@ -3,8 +3,15 @@
     width: 100%;
 }
 
+body{
+    overflow: hidden;
+}
+
 img{
-    min-width: 200px;
-    max-width: 650px;
+    height:100%;
+}
+
+video{
+    width: 100% !important;
 }
 
