--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 #overlay{
     position: absolute;
     width: 100%;
+    z-index: 10;
 }
 
 body{
@@ -8,10 +9,16 @@ body{
 }
 
 img{
-    height:100%;
+    width:100%;
+  
+    
 }
 
 video{
     width: 100% !important;
 }
 
+.videoDiv{
+    
+    transform: scaleX(-1);
+}
