--- a/style.css
+++ b/style.css
@@ -1,10 +1,24 @@
 #overlay{
     position: absolute;
     width: 100%;
+    z-index: 10;
+}
+
+body{
+    overflow: hidden;
 }
 
 img{
-    min-width: 200px;
-    max-width: 650px;
+    width:100%;
+  
+    
 }
 
+video{
+    width: 100% !important;
+}
+
+.videoDiv{
+    
+    transform: scaleX(-1);
+}
